--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<p>由于版权问题，本网站已下线，敬请期待官方Flink网站中文版的上线</p>
-
-<p>Due to copyright issues, this website has been offline, so stay tuned for the official Chinese version of Flink website.</p>
+<script type="text/javascript">window.location.href="zh.ververica.com";</script>
