--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location.href="zh.ververica.com";</script>
+<script type="text/javascript">window.location.href="https://zh.ververica.com";</script>
