--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location.href="http://zh.ververica.com";</script>
+<script type="text/javascript">window.location.href="https://flink.apache.org/zh/";</script>
